[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/SpindelHand.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/SpiderHand.png" type="Texture" id=2]
[ext_resource path="res://components/RayCastContainer.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.0
height = 0.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walking"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 0, 1, 0, 1 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 292.207

[node name="SpindelHand" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 73
script = ExtResource( 1 )
_walk_distance = 150
_walk_speed = 120
_charge_max_speed = 300.0
_friction = 200.0
_friction_time_multiplier = 0.6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 3 )
anims/Walking = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2, -14 )
texture = ExtResource( 2 )
hframes = 3

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource( 2 )

[node name="RayCastSolidDetection" parent="." instance=ExtResource( 3 )]
layers_to_be_detected = [ 3, 6 ]
_set_raycast_length = true
_raycast_length = 150

[node name="Left" type="RayCast2D" parent="RayCastSolidDetection"]
enabled = true
cast_to = Vector2( -200, 0 )
collision_mask = 8
collide_with_areas = true

[node name="Right" type="RayCast2D" parent="RayCastSolidDetection"]
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 8
collide_with_areas = true

[node name="Up" type="RayCast2D" parent="RayCastSolidDetection"]
enabled = true
cast_to = Vector2( 0, -100 )
collision_mask = 8
collide_with_areas = true

[node name="Down" type="RayCast2D" parent="RayCastSolidDetection"]
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 8
collide_with_areas = true

[node name="TimerBeforeNewWalk" type="Timer" parent="."]
one_shot = true

[node name="TimerBeforeCharge" type="Timer" parent="."]
one_shot = true

[node name="TimerBeforeKnockdownStopped" type="Timer" parent="."]
one_shot = true

[node name="TimerIfWalkNeverEnds" type="Timer" parent="."]
one_shot = true

[node name="TimerForIfCollidedDowntime" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_exited"]
[connection signal="timeout" from="TimerBeforeCharge" to="." method="_on_TimeBeforeCharging_timeout"]
[connection signal="timeout" from="TimerBeforeKnockdownStopped" to="." method="_on_TimerBeforeKnockdownStop_timeout"]
[connection signal="timeout" from="TimerIfWalkNeverEnds" to="." method="_on_TimerIfWalkNeverEnds_timeout"]
